sistemati numerosi errori logici

--- a/public/css/diary.css
+++ b/public/css/diary.css
@@ -5,3 +5,15 @@
 .containers {
     background-color: #f2e4da;
 }
+
+.mycard {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #92574B;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
+}
