--- a/public/css/app.css
+++ b/public/css/app.css
@@ -77,7 +77,7 @@ body {
     line-height: 1.6;
     color: #212529;
     text-align: left;
-    background-color: #f2e4da;
+    background-color: #2c2c2c;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
